2010-10-07  Brady Eidson  <beidson@apple.com>

        Build fix.

        GCC continued to mask the fact that I still hadn't declared the correct symbol.

        * Platform/Logging.cpp:
        (initializeLogChannel):
        * Platform/Logging.h:

2010-10-07  Brian Weinstein  <bweinstein@apple.com>

        Build Fix. Fix the vcproj to make it valid and openable by Visual Studio.

        * win/WebKit2.vcproj:

2010-10-07  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add a WKPageFindClient, hook up WKPageCountStringMatches
        https://bugs.webkit.org/show_bug.cgi?id=47373

        * Shared/APIClient.h: Added.
        Add an APIClient class template which can be used to reduce duplicated
        code in the client wrappers.

        * UIProcess/API/C/WKPage.cpp:
        (WKPageSetPageFindClient):
        Initialize the page find client.

        * UIProcess/API/C/WKPage.h:
        * UIProcess/WebFindClient.cpp: Added.
        (WebKit::WebFindClient::didCountStringMatches):
        Call the WKPageFindClient function.

        * UIProcess/WebFindClient.h: Added.
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::initializeFindClient):
        Initialize the WebFindClient.

        (WebKit::WebPageProxy::findString):
        Send a FindString message.

        (WebKit::WebPageProxy::hideFindUI):
        Send a HideFindUI message.

        (WebKit::WebPageProxy::countStringMatches):
        Send a CountStringMatches message.

        (WebKit::WebPageProxy::didCountStringMatches):
        Call the find client.

        * UIProcess/WebPageProxy.messages.in:
        Add new message.

        * WebKit2.pro:
        * WebKit2.xcodeproj/project.pbxproj:
        Add new files.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::findString):
        (WebKit::WebPage::hideFindUI):
        Add stubs.

        (WebKit::WebPage::countStringMatches):