@@ -44,6 +44,7 @@
 
 #if ENABLE(WEB_PROCESS_SANDBOX)
 #import <sandbox.h>
+#import <stdlib.h>
 #endif
 
 // FIXME: We should be doing this another way.
@@ -62,12 +63,28 @@ int WebProcessMain(const CommandLine& commandLine)
 #if ENABLE(WEB_PROCESS_SANDBOX)
     if (![[NSUserDefaults standardUserDefaults] boolForKey:@"DisableSandbox"]) {
         char* errorBuf;
+        char tmpPath[PATH_MAX];
+        char tmpRealPath[PATH_MAX];
+        char cachePath[PATH_MAX];
+        char cacheRealPath[PATH_MAX];
         const char* frameworkPath = [[[[NSBundle bundleForClass:[WKView class]] bundlePath] stringByDeletingLastPathComponent] UTF8String];
         const char* profilePath = [[[NSBundle mainBundle] pathForResource:@"com.apple.WebProcess" ofType:@"sb"] UTF8String];
-        const char* const sandboxParam[] = { "webkit2_framework_path", frameworkPath, NULL };
+
+        if (confstr(_CS_DARWIN_USER_TEMP_DIR, tmpPath, PATH_MAX) <= 0 || !realpath(tmpPath, tmpRealPath))
+            tmpRealPath[0] = '\0';
+
+        if (confstr(_CS_DARWIN_USER_CACHE_DIR, cachePath, PATH_MAX) <= 0 || !realpath(cachePath, cacheRealPath))
+            cacheRealPath[0] = '\0';
+
+        const char* const sandboxParam[] = {
+            "WEBKIT2_FRAMEWORK_DIR", frameworkPath,
+            "DARWIN_USER_TEMP_DIR", (const char*)tmpRealPath,
+            "DARWIN_USER_CACHE_DIR", (const char*)cacheRealPath,
+            NULL
+        };
 
         if (sandbox_init_with_parameters(profilePath, SANDBOX_NAMED_EXTERNAL, sandboxParam, &errorBuf)) {
-            fprintf(stderr, "WebProcess: couldn't initialize sandbox profile [%s] with framework path [%s]: %s\n", profilePath, frameworkPath, errorBuf);
+            fprintf(stderr, "WebProcess: couldn't initialize sandbox profile [%s] with framework path [%s], tmp path [%s], cache path [%s]: %s\n", profilePath, frameworkPath, tmpRealPath, cacheRealPath, errorBuf);
             exit(EX_NOPERM);
         }
     } else
